tests/error/setchar_type.src
.IPPcode18
defvar GF@a
defvar GF@b
move GF@a string@abc
setchar GF@a int@2 int@1